[gd_scene load_steps=5 format=2]

[ext_resource path="res://ui/components/input_prompt.tscn" type="PackedScene" id=1]
[ext_resource path="res://ui/dialog/inventory.gd" type="Script" id=2]
[ext_resource path="res://ui/components/scroll_to_focused.gd" type="Script" id=3]
[ext_resource path="res://ui/dialog/items_list.gd" type="Script" id=4]

[node name="Inventory" type="PanelContainer"]
margin_right = 663.0
margin_bottom = 454.0
script = ExtResource( 2 )

[node name="h" type="HBoxContainer" parent="."]
margin_left = 7.0
margin_top = 7.0
margin_right = 656.0
margin_bottom = 447.0

[node name="list" type="VBoxContainer" parent="h"]
margin_right = 265.0
margin_bottom = 440.0
size_flags_horizontal = 3
script = ExtResource( 4 )

[node name="Label" type="Label" parent="h/list"]
margin_right = 265.0
margin_bottom = 14.0
text = "Inventory"

[node name="ScrollContainer" type="ScrollContainer" parent="h/list"]
margin_top = 18.0
margin_right = 265.0
margin_bottom = 348.0
size_flags_horizontal = 3
size_flags_vertical = 3
script = ExtResource( 3 )
container_path = NodePath("items")
accept_input = true

[node name="items" type="VBoxContainer" parent="h/list/ScrollContainer"]
margin_right = 265.0
size_flags_horizontal = 3

[node name="sort" type="HBoxContainer" parent="h/list"]
margin_top = 352.0
margin_right = 265.0
margin_bottom = 416.0

[node name="input_prompt" parent="h/list/sort" instance=ExtResource( 1 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 64.0
margin_bottom = 64.0
action = "ui_sort"
small = true

[node name="Label" type="Label" parent="h/list/sort"]
margin_left = 68.0
margin_top = 25.0
margin_right = 265.0
margin_bottom = 39.0
size_flags_horizontal = 3
text = "Sorting by: X"
align = 1

[node name="back" type="Button" parent="h/list"]
margin_top = 420.0
margin_right = 265.0
margin_bottom = 440.0
text = "Back"

[node name="item_properties" type="VBoxContainer" parent="h"]
margin_left = 269.0
margin_right = 649.0
margin_bottom = 440.0
rect_min_size = Vector2( 380, 0 )
size_flags_horizontal = 3

[node name="label" type="Label" parent="h/item_properties"]
margin_right = 380.0
margin_bottom = 14.0
text = "Item Name"

[node name="HSeparator" type="HSeparator" parent="h/item_properties"]
margin_top = 18.0
margin_right = 380.0
margin_bottom = 22.0

[node name="description" type="Label" parent="h/item_properties"]
margin_top = 26.0
margin_right = 380.0
margin_bottom = 40.0
text = "Description"
autowrap = true

[connection signal="item_pressed" from="h/list" to="." method="_on_item_pressed"]
[connection signal="pressed" from="h/list/back" to="." method="cancel"]
